*SVN*

* Mega documentation patches. #7025, #7069 [rwdaigle]

* Base.exists?(id, options) and Base#exists? check whether the resource is found.  #6970 [rwdaigle]

* Query string support.  [untext, Jeremy Kemper]
    # GET /forums/1/topics.xml?sort=created_at
    Topic.find(:all, :forum_id => 1, :sort => 'created_at')

* Base#==, eql?, and hash methods. == returns true if its argument is identical to self or if it's an instance of the same class, is not new?, and has the same id. eql? is an alias for ==. hash delegates to id.  [Jeremy Kemper]

* Allow subclassed resources to share the site info [Rick, Jeremy Kemper]

    class BeastResource < ActiveResource::Base
      self.site = 'http://beast.caboo.se'
    end

    class Forum < BeastResource
      # taken from BeastResource
      # self.site = 'http://beast.caboo.se'
    end

    class Topic < BeastResource
      self.site += '/forums/:forum_id'
    end

* Fix issues with ActiveResource collection handling.  Closes #6291. [bmilekic]

* Use attr_accessor_with_default to dry up attribute initialization. References #6538. [Stuart Halloway]

* Add basic logging support for logging outgoing requests. [Jamis Buck]

* Add Base.delete for deleting resources without having to instantiate them first. [Jamis Buck]

* Make #save behavior mimic AR::Base#save (true on success, false on failure). [Jamis Buck]

* Add Basic HTTP Authentication to ActiveResource (closes #6305). [jonathan]

* Extracted #id_from_response as an entry point for customizing how a created resource gets its own ID.
  By default, it extracts from the Location response header.

* Optimistic locking: raise ActiveResource::ResourceConflict on 409 Conflict response. [Jeremy Kemper]

    # Example controller action
    def update
      @person.save!
    rescue ActiveRecord::StaleObjectError
      render :xml => @person.reload.to_xml, :status => '409 Conflict'
    end

* Basic validation support [Rick Olson]
